# TinyToT

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Makefile  Makefile.user.template  Pipfile  README.md  opencode.json  pyproject.toml  requirements.txt  server.py  setup.py  tests.py
docs/: USER_GUIDE.md
docs/guides/: architecture.md  concepts.md
docs/source/: conf.py  getting_started.md  index.md
docs/source/_static/: custom.css
docs/source/api/: README.md  agentresponse.md  applyrefinement.md  audiotool.md  buildcontextprompt.md  categorizeprompt.md  chainvector.md  clone.md  cosinesim.md  datatool.md  detectagentneeds.md  detectcoderequest.md  detectcomputeprompt.md  detectinformationneed.md  detectlanguage.md  detectrefinementintent.md  detectresponsemode.md  detecttoolusage.md  detectusecase.md  documenttool.md  executereasoningsteps.md  explaincode.md  explainreasoning.md  extractevaluatedresponse.md  extractpriorcode.md  extracttopic.md  filetool.md  findknowledgeanswer.md  generatecode.md  generatejsonscoringresponse.md  generateproject.md  generatereasoningresponse.md  generatetreeofthoughtsresponse.md  handleusecase.md  imagetool.md  iscoderequest.md  isprojectrequest.md  learningjournal.md  loadhermesjournal.md  loadtoolpatterns.md  (+21 more)
docs/source/guides/: architecture.md  concepts.md
docs/source/how_to/: 01_knowledge_base.md  02_compute_engine.md  03_reasoning_chains.md  04_tool_calling.md  05_hermes_bridge.md  06_eval_harness.md  07_benchmarking.md  08_ingesting_corpora.md  09_extending.md  10_code_generation.md  11_variants.md  12_cli.md  index.md
scripts/: build_binary.py
tests/: aws_tests.tst  filesystem_tests.tst  financial_tests.tst  math_tests.tst  programming_tests.tst  tool_calling_tests.tst
tinytot/: __init__.py  _secrets_shim.py  agent.py  benchmark.py  clone.py  codegen.py  compute.py  content.py  eval_summarize.py  generate.py  inference.py  ingest.py  lang.py  refine.py  retrieval.py  server.py  summarize.py  tools.py  tools_ext.py
tinytot/_data/: benchmarks_baseline.json  gsm8k_test.jsonl
tinytot/_data/categories/: agent.md  aws_cloud.md  computer_science.md  creative_writing.md  debug.md  financial.md  fs.md  game24.md  general_knowledge.md  math.md  opentraces_augment_aws.md  opentraces_augment_computer_science.md  opentraces_augment_creative_writing.md  opentraces_augment_debug.md  opentraces_augment_general_lambda_hermes_agent_reasoning_opentraces.md  opentraces_augment_general_opentraces_devtime.md  opentraces_augment_general_opentraces_runtime.md  programming_eval.md  research.md  smalltalk.md  tool_calling.md
tinytot/_data/codegen/: config.yaml  decompositions.yaml  patterns.yaml  projects.yaml
tinytot/_data/eval/: summarize_eval.md
tinytot/_data/generate/: comparatives.yaml  contradiction_pairs.yaml  extractors.yaml  howto_scripts.yaml  names_gender.yaml  pythonic_subs.yaml  rewrite_subs.yaml  static_checks.yaml  uncertainty.yaml  use_cases.yaml
tinytot/_data/journal/: 2026-07-15.md
tinytot/_data/knowledge/: analogical-similarity.md  analytic_entailment.md  biology_health.md  causal-judgment.md  checkmate-in-one.md  chinese-remainder-theorem.md  code-line-description.md  colored_objects.md  contextual-parametric-knowledge-conflicts.md  earth_science.md  epistemic-reasoning.md  finance_investing.md  formal_logic.md  general.md  graduate_science.md  gsm8k.md  gsm8k_test.md  hellaswag.md  hendrycks-math.md  humaneval.md  hyperbaton.md  identify-math-theorems.md  law_legal.md  linguistics-puzzles.md  logic-grid-puzzle.md  logical-fallacy-detection.md  macroeconomics.md  medicine_health.md  misconceptions.md  navigate.md  object_counting.md  physics-questions.md  physics.md  physics_chemistry.md  psychology.md  reasoning-about-colored-objects.md  science_vocab.md  social-iqa.md  software_engineering.md  sports-understanding.md  (+13 more)
tinytot/_data/schema/: information_patterns.md
tinytot/_data/variants/: bird.yaml  dino.yaml  dog.yaml
tinytot/_web/: __init__.py
tinytot/_web/static/: index.html  style.css
tinytot/cli/: generate_api_docs.py
tinytot/tests/: check_benchmarks.py  check_data_quality.py  conftest.py  test_codegen_exec.py
tinytot/tests/unit/: test_agent.py  (+11 more)
(+191 files in other folders)
